# napari-bbox-annotator

./: .gitignore  MANIFEST.in  README.md  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
src/napari_bbox_annotator/: __init__.py  _widget.py  annotator.ui  napari.yaml
src/napari_bbox_annotator/_tests/: test_widget.py
src/napari_yolo/: __init__.py  _widget.py  napari.yaml
src/napari_yolo/_tests/: test_widget.py
